| Summary: | ASTERISK-19424: Spurious hangups during ringing on analog DAHDI channels | ||||
| Reporter: | Jeremy Pepper (jpepper) | Labels: | |||
| Date Opened: | 2012-02-22 17:58:52.000-0600 | Date Closed: | 2012-02-27 18:28:19.000-0600 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Channels/chan_dahdi | ||
| Versions: | Frequency of Occurrence | Constant | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) asterisk-19424-initialize_priority_regression.diff | |||
| Description: | Commit 356042 seems to have introduced a problem in chan_dahdi. Asterisk detects an immediate hangup on inbound calls, even though the source still shows ringing. This cycle will repeat as long as the source continues to indicate ringing. I can confirm that the issue does not occur in r355999. | ||||
| Comments: | By: Richard Mudgett (rmudgett) 2012-02-22 18:57:31.803-0600 The change revision specified is a channel opaquification change. By: Matt Jordan (mjordan) 2012-02-23 08:53:39.386-0600 I'm going to keep this open and make sure Terry's aware of it, but I expect this to get fixed shortly. By: Michael L. Young (elguero) 2012-02-24 15:25:10.803-0600 I was just about to open an issue about this but found this was already opened. I am attaching a simple patch which fixes this regression. It would appear that with the recent changes for channel opaquification, the context priority is being initialized to -1 instead of 1 resulting in the dialplan never being executed. I see that chan_sip sets the context priority to 1 when creating a new sip channel and therefore sip is not affected. I am not sure if all channel drivers should be responsible for setting this or not. Therefore, I just set the context priority back to 1 as it was before in main/channel.c upon creating a new channel. | ||||