Fix ast_channel allocation init setting priority to -1 instead of 1.

* Fix opaquification conversion error.

(closes issue ASTERISK-19424)
Reported by: Jeremy Pepper
Patches:
      asterisk-19424-initialize_priority_regression.diff (license #5026) patch uploaded by Michael L. Young


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@357101 65c4cc65-6c06-0410-ace0-fbb531ad65f3